--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -1980,7 +1980,7 @@ label.menu__btn {
 .container_two{
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 	align-items: center;
     vertical-align: middle;
@@ -1996,7 +1996,7 @@ label.menu__btn {
 	align-items: center;
     vertical-align: middle;
 	width: 45vw;
-    height: 225px;
+    height: 200px;
 }
 
 .img_intrograss{
@@ -2061,7 +2061,7 @@ div.img_relative.labtop{
     justify-content: center;
 	align-items: center;
     vertical-align: middle;
-    height: 30vh;
+    height: 40vh;
     width: 100%;
 }
 
@@ -2203,7 +2203,7 @@ h4.email a{
 			border-left: 6px solid #333333;
 			border-right: 6px solid #111111;
 			border-bottom: 0px;
-			height: 15vh;
+			height: 40vh;
 			background: red;
 		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
 		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
