--- a/stylesheet/contact_portfolio-coding.css
+++ b/stylesheet/contact_portfolio-coding.css
@@ -39,7 +39,7 @@ h4 > a:active{
   text-decoration: none;
   transition: all ease-in-out;
   float: left;
-  padding: 50px 70px 20px 50px;
+  /*padding: 50px 70px 20px 50px;*/
   opacity: 1;
   text-transform: lowercase;
 
