--- a/stylesheet/monitor_portfolio.css
+++ b/stylesheet/monitor_portfolio.css
@@ -173,28 +173,25 @@
 
 .largephonemimicnav{
   background-color: none;
-  float: left;
   opacity: .8;
   position: relative;
   display: inline-block;
   width: 100%;
   font-size: 10pt;
+  top: -10px;
 }
 
 .navbarphonefontawesomefloatright{
-  float: right;
 }
 
 .phoneblacknotch {
   background-color: #000000;
   color: #000000;
   display: inline-block;
-  width: 140px;
+  width: 130px;
   height: 30px;
-  top: -10px;
-  position: absolute;
+  position: relative;
   border-radius: 0px 0px 15px 15px;
-  left: 100px;
   filter: drop-shadow(0px 0px 0px rgba(255,255,255,0));
 }
 
@@ -207,7 +204,7 @@
   top: 12px;
   position: absolute;
   border-radius: 25px 25px 25px 25px;
-  left: 45px;
+  left: 40px;
   filter: drop-shadow(0px 0px 0px rgba(255,255,255,0));
 }
 
