--- a/stylesheet/intro_animation_transition.css
+++ b/stylesheet/intro_animation_transition.css
@@ -435,9 +435,9 @@ div.trapezoiddiv {
 
   div.container_one.intro {
     width: 80vw;
-    height: 80vh;
+    height: 65vh;
     animation-name: none;
-    margin-top: 13%;
+    margin: 20px 0px 20px 0px;
     }
 
   td.introbiopictureanimation{
@@ -467,12 +467,12 @@ div.trapezoiddiv {
         }
         75% {
           opacity: 1;
-    			transform: scale(1,1) translateX(-50vw) translateY(55vh);
+    			transform: scale(1,1) translateX(-55vw) translateY(55vh);
           padding-top: 0%;
         }
         100% {
           opacity: 1;
-          transform: scale(1,1) translateX(-50vw) translateY(55vh);
+          transform: scale(1,1) translateX(-55vw) translateY(55vh);
           padding-top: 0%;
           }
       }
