--- a/stylesheet/intro_animation_transition.css
+++ b/stylesheet/intro_animation_transition.css
@@ -435,9 +435,11 @@ div.trapezoiddiv {
 
   div.container_one.intro {
     width: 80vw;
-    height: 65vh;
+    height: 75vh;
     animation-name: none;
-    margin: 20px 0px 20px 0px;
+    margin-bottom: 35px;
+    margin-top: 30px;
+  /*  margin: 20px 0px 20px 0px;*/
     }
 
   td.introbiopictureanimation{
