--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -10,6 +10,17 @@
 		display: inherit;
 	}
 
+.click-on-image-cta {
+	color: #FF5F1F;
+	font-size: 9.5pt;
+	font-family: "lato", sans-serif;
+	font-weight: bold;
+	margin: 0 0 15px 5px;
+	padding-right: 5px;
+	opacity: 1;
+}
+
+
 	/*Portfolio Navigate 5480 */
 
 	span.close-btn-xy {
